tests/ui/failing/packed-struct-drop-aligned.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.00s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/packed/packed-struct-drop-aligned.rs`
error[E0557]: feature has been removed
 --> /home/zncv/Applications/mir-semantics-compiletest/ui/packed/packed-struct-drop-aligned.rs:2:12
  |
2 | #![feature(generators)]
  |            ^^^^^^^^^^ feature has been removed
  |
  = note: renamed to `coroutines`

error[E0432]: unresolved import `std::ops::Generator`
 --> /home/zncv/Applications/mir-semantics-compiletest/ui/packed/packed-struct-drop-aligned.rs:6:5
  |
6 | use std::ops::Generator;
  |     ^^^^^^^^^^^^^^^^^^^ no `Generator` in `ops`

error[E0658]: yield syntax is experimental
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/packed/packed-struct-drop-aligned.rs:51:9
   |
51 |         yield;
   |         ^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable
   = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

warning: lint `unused_tuple_struct_fields` has been renamed to `dead_code`
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/packed/packed-struct-drop-aligned.rs:27:24
   |
27 | struct NotCopy(#[allow(unused_tuple_struct_fields)] u8);
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use the new name: `dead_code`
   |
   = note: `#[warn(renamed_and_removed_lints)]` on by default

error[E0658]: yield syntax is experimental
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/packed/packed-struct-drop-aligned.rs:51:9
   |
51 |         yield;
   |         ^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable
   = note: this compiler was built on 2024-11-28; consider upgrading it if it is out of date

error: `yield` can only be used in `#[coroutine]` closures, or `gen` blocks
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/packed/packed-struct-drop-aligned.rs:51:9
   |
51 |         yield;
   |         ^^^^^
   |
help: use `#[coroutine]` to make this closure a coroutine
   |
42 |     let mut g = #[coroutine] || {
   |                 ++++++++++++

error[E0635]: unknown feature `generator_trait`
 --> /home/zncv/Applications/mir-semantics-compiletest/ui/packed/packed-struct-drop-aligned.rs:3:12
  |
3 | #![feature(generator_trait)]
  |            ^^^^^^^^^^^^^^^

error[E0599]: no method named `resume` found for struct `Pin<&mut ...>` in the current scope
   --> /home/zncv/Applications/mir-semantics-compiletest/ui/packed/packed-struct-drop-aligned.rs:53:22
    |
53  |     Pin::new(&mut g).resume(());
    |                      ^^^^^^ method not found in `Pin<&mut ...>`
    |
   ::: /home/zncv/.rustup/toolchains/nightly-2024-11-29-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/ops/coroutine.rs:119:8
    |
119 |     fn resume(self: Pin<&mut Self>, arg: R) -> CoroutineState<Self::Yield, Self::Return>;
    |        ------ the method is available for `std::pin::Pin<&mut {coroutine@/home/zncv/Applications/mir-semantics-compiletest/ui/packed/packed-struct-drop-aligned.rs:42:17: 42:19}>` here
    |
    = note: the full type name has been written to 'packed-struct-drop-aligned.long-type-711159623308821818.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = help: items from traits can only be used if the trait is in scope
help: trait `Coroutine` which provides `resume` is implemented but not in scope; perhaps you want to import it
    |
4   + use std::ops::Coroutine;
    |

error: aborting due to 7 previous errors; 1 warning emitted

Some errors have detailed explanations: E0432, E0557, E0599, E0635, E0658.
For more information about an error, try `rustc --explain E0432`.
